# sigma-rs

./: .coverage  .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  HANDOVER_DB_AUTOMATION.md  HANDOVER_USER_MIGRATION_JUAN_NAVONE_TODO.md  README.md  README_STARTUP.md  SigmaRSIngresoTray.spec  arrancar.bat  crear_usuarios_prueba.py  extractor_access.ps1  fg001.py  instalar.bat  install_to_startup.bat  pyproject.toml  recover2.py  requirements.txt  servidor_auto.ps1  start_sigma_rs.bat
.agent/skills/: SKILLS.md
.claude/: settings.local.json
.github/workflows/: ci.yml
apps/tickets/: admin.py  apps.py  models.py  urls.py
config/: settings.py  urls.py  wsgi.py
context/: personal.csv
context/ends_day/: 2026-03-09.md
context/prompts/: 01-estructura.md  02-refactor-sigma-rs.md  orig 02-refactor-proto.md
core/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py
docs/: 01-estructura.md  02-git-readme.md  ARCHITECTURE.md  CHANGELOG.md  DB_AUTOMATION_WINDOWS.md  MAINTENANCE_ENTRY.md  OPTIMIZACION_IMPORT_ACCESS.md  SIGMA-RS_RESUMEN_PROYECTO.md  STARTUP.md  TRAY_APP_INSTALL.md  TRAY_APP_INSTALL_ES.md  handoff_reimport_ccrr.md
docs/adr/: 0001-kilometrage-db.md  0002-rolling-stock-category-routing.md
docs/agents/: AGENT.md  AGENTS.md  CLAUDE.md
ops/: db_maintenance_daily.ps1  db_maintenance_weekly.ps1  fix_ingreso_server.bat  fix_ingreso_server.ps1  install_to_startup.bat  register_db_tasks.ps1  servidor_auto.ps1  start_sigma_rs.bat
scripts/: arrancar.bat  crear_usuarios_prueba.py  export_to_access.ps1  ingreso_env.example.ps1  instalar.bat  run_ingreso_tray_local.ps1  set_ingreso_secrets.ps1  skill_registry_sync.py
tray-app/: README.md
(+219 files in other folders)
