[project]
name = "sigma-rs"
version = "0.1.0"
description = "Sistema de Gestión de Tickets para Material Rodante"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "ARG001", # unused function argument (common in Django views)
    "ARG002", # unused method argument
    "SIM102", # nested if (sometimes more readable)
    "SIM116", # dict instead of if-elif (sometimes more readable)
]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["E501", "F401"]
"**/__init__.py" = ["F401"]
"tests/**/*.py" = ["ARG001", "ARG002"]
"crear_usuarios_prueba.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "-ra",
    "-q",
]
testpaths = ["tests"]

[tool.coverage.run]
source = ["apps"]
omit = [
    "*/migrations/*",
    "*/__pycache__/*",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
